@@ -11,9 +11,14 @@ repositories {
 }
 
 application {
-    // A classe principal deve ser o caminho completo da sua classe (com pacotes)
-    mainClass = 'system.Main'
+    mainClassName = 'system.Main' // substitua pelo seu main
+    applicationDefaultJvmArgs = [
+        '--add-opens java.base/java.lang.reflect=ALL-UNNAMED',
+        '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
+        '--add-opens', 'javafx.controls/javafx.scene.control=ALL-UNNAMED'
+    ]
 }
+
 
 javafx {
     version = "21.0.2"
@@ -27,11 +32,14 @@ dependencies {
     implementation 'org.webjars:font-awesome:6.0.0'
     implementation 'com.google.code.gson:gson:2.10.1'
     implementation 'com.google.code.gson:gson:2.8.9'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.2'
+    implementation 'com.jfoenix:jfoenix:9.0.10'
 }
 
 // Tarefa para rodar o servidor Python com FastAPI
 task runPythonServer(type: Exec) {
-    commandLine 'python', 'system/integration/main.py'  // Altere o caminho para o seu main.py
+    // Altere o caminho para refletir o novo diretório de integração
+    commandLine 'python', 'integration/system/integration/main.py'  // Caminho do seu main.py
     workingDir './'  // Diretório onde o server.py está localizado
     doLast {
         println 'Servidor FastAPI (Python) está rodando...'
